# speech_assistant

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  README.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_dev.py  setup.cfg  setup.py
.github/workflows/: README.md  ci.yml  frontend.yml
api/: app.py  enhanced_app.py
docs/: TECHNICAL_REPORT.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
scripts/: benchmark_dashboard.py  benchmark_models.py  cleanup.py  convert_models.py  convert_whisper_simple.py  download_models.py  download_models_fixed.py  download_tts_alternative.py  generate_documentation.py  improved_whisper_converter.py  run_tests.py  setup_direct_implementation.py  setup_simple_tts.py  simple_whisper_converter.py  test_full_pipeline.py
src/: config.py
src/assistant/: enhanced_speech_assistant.py  llm_response_generator.py  ollama_integration.py  speech_assistant.py
src/llm/: __init__.py  assistant.py  llm_assistant.py
src/stt/: speech_recognition.py  whisper_converter.py  whisper_direct.py  whisper_inference.py
src/tts/: cross_platform_tts.py  mac_tts.py  simple_tts.py  tts_converter.py  tts_inference.py
src/utils/: audio.py  benchmark.py  env_loader.py
tests/: conftest.py  run_tests.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_mac_tts.py  test_whisper_direct.py
ui/: enhanced_streamlit_app.py  streamlit_app.py
(+25 files in other folders)
