[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 127
exclude = .git,__pycache__,build,dist,venv
ignore = E203, W503

[metadata]
name = speech_assistant
version = 0.1.0
description = An efficient speech recognition and text-to-speech system with LLM integration
author = Your Name
author_email = your.email@example.com
license = MIT 